# CryptoRLO

./: README.md  pyproject.toml
RLO/: hash.ipynb  indcpa.ipynb  intctxt.ipynb  prf.ipynb  readme.md  simulate.py
RLO/game/: cr.py  indcpa.py  int_ctxt.py  prf.py  ufcma.py
RLO/tools/: AES.py  block_cipher.py  functions.py  modes_of_operation.py
src/: block_cipher_key_recovery.py  block_cipher_key_recovery_np.py  indcpa.ipynb  intctxt.ipynb  mac.ipynb  readme.md  simulate.py
src/cryptogame/game/: __init__.py  cr.py  indcpa.py  int_ctxt.py  prf.py  ufcma.py
src/cryptogame/tools/: AES.py  __init__.py  block_cipher.py  modes_of_operation.py  utils.py
src/playcrypt/: primitives.py
src/playcrypt/games/: game_kr.py
src/playcrypt/ideal/: block_cipher.py
src/playcrypt/ui/: button.py  main.py  text.py
src/test/: hash.ipynb  indcpa.ipynb  intctxt.ipynb  mac.ipynb  prf.ipynb
